tests/ui/wireframe_result_default_rejects_unit_protocol.stderr
error[E0308]: mismatched types
 --> tests/ui/wireframe_result_default_rejects_unit_protocol.rs:7:54
  |
7 |     let _: WireframeError = WireframeError::Protocol(());
  |                             ------------------------ ^^ expected `NoProtocolError`, found `()`
  |                             |
  |                             arguments to this enum variant are incorrect
  |
help: the type constructed contains `()` due to the type of the argument passed
 --> tests/ui/wireframe_result_default_rejects_unit_protocol.rs:7:29
  |
7 |     let _: WireframeError = WireframeError::Protocol(());
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^--^
  |                                                      |
  |                                                      this argument influences the type of `Protocol`
note: tuple variant defined here
 --> src/error.rs
  |
  |     Protocol(E),
  |     ^^^^^^^^

error[E0308]: mismatched types
 --> tests/ui/wireframe_result_default_rejects_unit_protocol.rs:8:71
  |
8 |     let _: WireframeError<NoProtocolError> = WireframeError::Protocol(());
  |                                              ------------------------ ^^ expected `NoProtocolError`, found `()`
  |                                              |
  |                                              arguments to this enum variant are incorrect
  |
help: the type constructed contains `()` due to the type of the argument passed
 --> tests/ui/wireframe_result_default_rejects_unit_protocol.rs:8:46
  |
8 |     let _: WireframeError<NoProtocolError> = WireframeError::Protocol(());
  |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^--^
  |                                                                       |
  |                                                                       this argument influences the type of `Protocol`
note: tuple variant defined here
 --> src/error.rs
  |
  |     Protocol(E),
  |     ^^^^^^^^

error[E0308]: mismatched types
 --> tests/ui/wireframe_result_default_rejects_unit_protocol.rs:9:54
  |
9 |     let _: Result<()> = Err(WireframeError::Protocol(()));
  |                             ------------------------ ^^ expected `NoProtocolError`, found `()`
  |                             |
  |                             arguments to this enum variant are incorrect
  |
help: the type constructed contains `()` due to the type of the argument passed
 --> tests/ui/wireframe_result_default_rejects_unit_protocol.rs:9:29
  |
9 |     let _: Result<()> = Err(WireframeError::Protocol(()));
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^--^
  |                                                      |
  |                                                      this argument influences the type of `Protocol`
note: tuple variant defined here
 --> src/error.rs
  |
  |     Protocol(E),
  |     ^^^^^^^^
